Launch GrandUI directly